mosaic-tty/src/commonMain/c/mosaic-test-tty.h

typedef struct MosaicTestTtyImpl MosaicTestTty;
MOSAIC_EXPORT MosaicTtyIoResult testTty_read(MosaicTestTty *testTty, uint8_t *buffer, int count);
MOSAIC_EXPORT uint32_t testTty_interruptRead(MosaicTestTty *testTty);
MOSAIC_EXPORT uint32_t testTty_resize(MosaicTestTty *testTty, int columns, int rows, int width, int height);
MOSAIC_EXPORT uint32_t testTty_sendFocusEvent(MosaicTestTty *testTty, bool focused);
MOSAIC_EXPORT uint32_t testTty_sendKeyEvent(MosaicTestTty *testTty);
MOSAIC_EXPORT uint32_t testTty_sendMouseEvent(MosaicTestTty *testTty);
MOSAIC_EXPORT uint32_t testTty_free(MosaicTestTty *testTty);