mosaic-tty/src/jvmJdk22/java/com/jakewharton/mosaic/tty/Libmosaic.java


    /**
     * {@snippet lang=c :
     * MosaicTtyIoResult testTty_read(MosaicTestTty *testTty, uint8_t *buffer, int count)
     * }
     */
    public static MemorySegment testTty_read(SegmentAllocator allocator, MemorySegment testTty, MemorySegment buffer, int count) {
        var mh$ = testTty_read.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("testTty_read", allocator, testTty, buffer, count);
            }
            return (MemorySegment)mh$.invokeExact(allocator, testTty, buffer, count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class testTty_interruptRead {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Libmosaic.C_INT,
            Libmosaic.C_POINTER
        );

        public static final MemorySegment ADDR = Libmosaic.findOrThrow("testTty_interruptRead");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t testTty_interruptRead(MosaicTestTty *testTty)
     * }
     */
    public static FunctionDescriptor testTty_interruptRead$descriptor() {
        return testTty_interruptRead.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t testTty_interruptRead(MosaicTestTty *testTty)
     * }
     */
    public static MethodHandle testTty_interruptRead$handle() {
        return testTty_interruptRead.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t testTty_interruptRead(MosaicTestTty *testTty)
     * }
     */
    public static MemorySegment testTty_interruptRead$address() {
        return testTty_interruptRead.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t testTty_interruptRead(MosaicTestTty *testTty)
     * }
     */
    public static int testTty_interruptRead(MemorySegment testTty) {
        var mh$ = testTty_interruptRead.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("testTty_interruptRead", testTty);
            }
            return (int)mh$.invokeExact(testTty);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class testTty_resize {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Libmosaic.C_INT,
            Libmosaic.C_POINTER,
            Libmosaic.C_INT,
            Libmosaic.C_INT,
            Libmosaic.C_INT,
            Libmosaic.C_INT
        );

        public static final MemorySegment ADDR = Libmosaic.findOrThrow("testTty_resize");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t testTty_resize(MosaicTestTty *testTty, int columns, int rows, int width, int height)
     * }
     */
    public static FunctionDescriptor testTty_resize$descriptor() {
        return testTty_resize.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t testTty_resize(MosaicTestTty *testTty, int columns, int rows, int width, int height)
     * }
     */
    public static MethodHandle testTty_resize$handle() {
        return testTty_resize.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t testTty_resize(MosaicTestTty *testTty, int columns, int rows, int width, int height)
     * }
     */
    public static MemorySegment testTty_resize$address() {
        return testTty_resize.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t testTty_resize(MosaicTestTty *testTty, int columns, int rows, int width, int height)
     * }
     */
    public static int testTty_resize(MemorySegment testTty, int columns, int rows, int width, int height) {
        var mh$ = testTty_resize.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("testTty_resize", testTty, columns, rows, width, height);
            }
            return (int)mh$.invokeExact(testTty, columns, rows, width, height);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class testTty_sendFocusEvent {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Libmosaic.C_INT,
            Libmosaic.C_POINTER,
            Libmosaic.C_BOOL
        );

        public static final MemorySegment ADDR = Libmosaic.findOrThrow("testTty_sendFocusEvent");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t testTty_sendFocusEvent(MosaicTestTty *testTty, bool focused)
     * }
     */
    public static FunctionDescriptor testTty_sendFocusEvent$descriptor() {
        return testTty_sendFocusEvent.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t testTty_sendFocusEvent(MosaicTestTty *testTty, bool focused)
     * }
     */
    public static MethodHandle testTty_sendFocusEvent$handle() {
        return testTty_sendFocusEvent.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t testTty_sendFocusEvent(MosaicTestTty *testTty, bool focused)
     * }
     */
    public static MemorySegment testTty_sendFocusEvent$address() {
        return testTty_sendFocusEvent.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t testTty_sendFocusEvent(MosaicTestTty *testTty, bool focused)
     * }
     */
    public static int testTty_sendFocusEvent(MemorySegment testTty, boolean focused) {
        var mh$ = testTty_sendFocusEvent.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("testTty_sendFocusEvent", testTty, focused);
            }
            return (int)mh$.invokeExact(testTty, focused);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class testTty_sendKeyEvent {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Libmosaic.C_INT,
            Libmosaic.C_POINTER
        );

        public static final MemorySegment ADDR = Libmosaic.findOrThrow("testTty_sendKeyEvent");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t testTty_sendKeyEvent(MosaicTestTty *testTty)
     * }
     */
    public static FunctionDescriptor testTty_sendKeyEvent$descriptor() {
        return testTty_sendKeyEvent.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t testTty_sendKeyEvent(MosaicTestTty *testTty)
     * }
     */
    public static MethodHandle testTty_sendKeyEvent$handle() {
        return testTty_sendKeyEvent.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t testTty_sendKeyEvent(MosaicTestTty *testTty)
     * }
     */
    public static MemorySegment testTty_sendKeyEvent$address() {
        return testTty_sendKeyEvent.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t testTty_sendKeyEvent(MosaicTestTty *testTty)
     * }
     */
    public static int testTty_sendKeyEvent(MemorySegment testTty) {
        var mh$ = testTty_sendKeyEvent.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("testTty_sendKeyEvent", testTty);
            }
            return (int)mh$.invokeExact(testTty);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class testTty_sendMouseEvent {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Libmosaic.C_INT,
            Libmosaic.C_POINTER
        );

        public static final MemorySegment ADDR = Libmosaic.findOrThrow("testTty_sendMouseEvent");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t testTty_sendMouseEvent(MosaicTestTty *testTty)
     * }
     */
    public static FunctionDescriptor testTty_sendMouseEvent$descriptor() {
        return testTty_sendMouseEvent.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t testTty_sendMouseEvent(MosaicTestTty *testTty)
     * }
     */
    public static MethodHandle testTty_sendMouseEvent$handle() {
        return testTty_sendMouseEvent.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t testTty_sendMouseEvent(MosaicTestTty *testTty)
     * }
     */
    public static MemorySegment testTty_sendMouseEvent$address() {
        return testTty_sendMouseEvent.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t testTty_sendMouseEvent(MosaicTestTty *testTty)
     * }
     */
    public static int testTty_sendMouseEvent(MemorySegment testTty) {
        var mh$ = testTty_sendMouseEvent.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("testTty_sendMouseEvent", testTty);
            }
            return (int)mh$.invokeExact(testTty);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class testTty_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Libmosaic.C_INT,
            Libmosaic.C_POINTER
        );

        public static final MemorySegment ADDR = Libmosaic.findOrThrow("testTty_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t testTty_free(MosaicTestTty *testTty)
     * }
     */
    public static FunctionDescriptor testTty_free$descriptor() {
        return testTty_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t testTty_free(MosaicTestTty *testTty)
     * }
     */
    public static MethodHandle testTty_free$handle() {
        return testTty_free.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t testTty_free(MosaicTestTty *testTty)
     * }
     */
    public static MemorySegment testTty_free$address() {
        return testTty_free.ADDR;
    }
